--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="AdminLauncher.AppWPF.MainWindow"
+﻿<mah:MetroWindow x:Class="AdminLauncher.AppWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AdminLauncher.AppWPF"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         Title="Admin Launcher" Height="800" Width="400"
         WindowStartupLocation="Manual"
         ResizeMode="NoResize"
@@ -246,4 +246,4 @@
             </TabItem>
         </TabControl>
     </Grid>
-</Window>
+</mah:MetroWindow>
