--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -188,7 +188,8 @@
 
             <!-- Tab Add Routine -->
             <TabItem Header="Add Routine" x:Name="AddRoutineTab">
-                <WrapPanel Orientation="Vertical">
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <StackPanel Orientation="Vertical">
                     <Label x:Name="RoutineIndexLabel" Visibility="Collapsed" Content="-1"/>
                     <Label Content="Routine Name"/>
                     <TextBox x:Name="RoutineNameTextBox" Margin="5"/>
@@ -213,13 +214,14 @@
                         <Button Content="Save" Click="SaveRoutine_Click" Width="100" Margin="5"/>
                         <Button Content="Cancel" Click="CancelRoutine_Click" Width="100" Margin="5"/>
                     </StackPanel>
-                </WrapPanel>
+                </StackPanel>
+                </ScrollViewer>
             </TabItem>
 
             <!-- Tab About -->
             <TabItem Header="About" x:Name="AboutTab">
 
-
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -253,7 +255,7 @@
                         </Grid>
                     </StackPanel>
 
-                    <WrapPanel Grid.Row="1" Margin="5" Orientation="Vertical">
+                    <StackPanel Grid.Row="1" Margin="5" Orientation="Vertical">
 
 
                         <!-- Authors/Developers -->
@@ -295,8 +297,9 @@
             <Hyperlink NavigateUri="https://github.com/kdesantis/AdminLauncher/issues" RequestNavigate="Hyperlink_RequestNavigate">GitHub issue</Hyperlink>
                         </TextBlock>
 
-                    </WrapPanel>
+                    </StackPanel>
                 </Grid>
+                </ScrollViewer>
             </TabItem>
         </TabControl>
     </Grid>
